feat: docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,7 @@ services:
       - MM_SQLSETTINGS_DATASOURCE=postgres://mmuser:mmuser_password@postgres:5432/mattermost?sslmode=disable
       - MM_SQLSETTINGS_DRIVERNAME=postgres
     depends_on:
-      postgres:
-        condition: service_healthy
+      - postgres
     volumes:
       - mattermost_data:/mattermost/data
       - mattermost_config:/mattermost/config
@@ -43,30 +42,27 @@ services:
       - tarantool_data:/var/lib/tarantool
       - ./tarantool:/opt/tarantool
     command: tarantool /opt/tarantool/init.lua
-    healthcheck:
-      test: ["CMD", "tarantool", "-e", "require('tarantool').ping()"]
-      interval: 5s
-      timeout: 1s
-      retries: 3
+    # healthcheck:
+    #   test: ["CMD", "tarantool", "-e", "require('tarantool').ping()"]
+    #   interval: 5s
+    #   timeout: 1s
+    #   retries: 3
     networks:
       - voting_net
 
   # Go-бот
-  # bot:
-  #   build: ./bot
-  #   restart: unless-stopped
-  #   depends_on:
-  #     mattermost:
-  #       condition: service_healthy
-  #     tarantool:
-  #       condition: service_healthy
-  #   environment:
-  #     - MATTERMOST_URL=http://mattermost:8065
-  #     - TARANTOOL_ADDR=tarantool:3301
-  #     - TARANTOOL_USER=voting_bot
-  #     - TARANTOOL_PASSWORD=123321
-  #   networks:
-  #     - voting_net
+  bot:
+    build: ./bot
+    restart: unless-stopped
+    depends_on:
+      mattermost:
+        condition: service_healthy
+      tarantool:
+        condition: service_healthy
+    env_file:
+      - ./bot/deploy.env
+    networks:
+      - voting_net
 
 volumes:
   mattermost_data:
