--- a/bot/deploy.env
+++ b/bot/deploy.env
@@ -1,7 +1,7 @@
 MM_TEAM="cal"
 MM_TOKEN="p7i7imzr5b8gfpt1dycbmqupuc"
 MM_CHANNEL="town-square"
-MM_SERVER="http://localhost:8065"
+MM_SERVER="http://mattermost:8065"
 MM_USERNAME="voting_bot"
 MM_PASSWORD="123321"
-TARANTOOL_SERVER="http://localhost:3301"
+TARANTOOL_SERVER="tarantool:3301"
